--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ tasks.named("generateGrammarSource") {
 jar {
     manifest {
         attributes(
-                'Main-Class': 'com.example.HadesCompiler' // Entry point for your compiler
+                'Main-Class': 'com.example.Main' // Entry point for your compiler
         )
     }
 }
@@ -70,5 +70,5 @@ java {
 }
 
 application {
-    mainClass = 'com.example.HadesCompiler'
+    mainClass = 'com.example.Main'
 }
