--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ dependencies {
     implementation 'org.ow2.asm:asm:9.2'
     implementation 'org.ow2.asm:asm-commons:9.2'
 
+    implementation 'commons-cli:commons-cli:1.5.0'
+
+
     // JUnit for testing
     testImplementation 'junit:junit:4.13.2'
 }
